fix: fix overlap issue

--- a/packages/frontend/src/app/home/main-slider.scss
+++ b/packages/frontend/src/app/home/main-slider.scss
@@ -34,11 +34,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: white;
+      background: transparent;
     }
 
     .swiper-slide-visible.swiper-slide-active {
-      width: 50vw;
+      width: 80vw;
       opacity: 1;
     }
 
@@ -47,7 +47,7 @@
     }
 
     .swiper-pagination-bullets {
-      height: 100px;
+      height: 40px;
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -68,8 +68,7 @@
 
     .topic-body {
       max-width: 800px;
-      margin-left: 22px;
-      margin-right: 22px;
+      margin-bottom: 60px;
       display: flex;
       position: relative;
       justify-content: center;
